--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   firebase_storage: ^11.1.2
   flutter_native_splash: ^2.2.19
   provider: ^6.0.5
+  flutter_staggered_grid_view: ^0.4.0
+  animate_do: ^2.1.0
+  salomon_bottom_bar: ^3.3.2
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
