--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,15 @@ dependencies:
   firebase_storage: ^11.1.2
   flutter_native_splash: ^2.2.19
   provider: ^6.0.5
-  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_grid_view: ^0.7.0
   animate_do: ^2.1.0
   salomon_bottom_bar: ^3.3.2
   google_nav_bar: ^5.0.6
+  settings_ui: ^2.0.2
+  file_picker: ^5.3.0
+  dotted_border: ^2.1.0
+  iconsax: ^0.0.8
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
