--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   iconsax: ^0.0.8
   path: ^1.8.2
   url_launcher: ^6.1.11
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
