--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path: ^1.8.2
   url_launcher: ^6.1.11
   loading_indicator: ^3.1.1
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
