--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.1
+  firebase_core: ^2.19.0
   firebase_auth: ^4.5.0
-  cloud_firestore: ^4.6.0
+  cloud_firestore: ^4.11.0
   firebase_storage: ^11.1.2
   flutter_native_splash: ^2.2.19
   provider: ^6.0.5
@@ -30,7 +30,9 @@ dependencies:
   loading_indicator: ^3.1.1
   another_flushbar: ^1.12.30
   arcore_flutter_plugin: ^0.1.0
+  camera: null
   permission_handler: ^11.0.1
+  model_viewer_plus: ^1.7.0
 
 dev_dependencies:
   flutter_test:
@@ -49,4 +51,6 @@ flutter:
     - assets/images/artsylane_logo_full.png
     - assets/images/artsylane_logo2.png
     - assets/images/ar_logo.png
+    - assets/model/tyranno.glb
+    - assets/model/scene.gltf
 
