--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   permission_handler: ^11.0.1
   model_viewer_plus: ^1.7.0
   like_button: ^2.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
