--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   model_viewer_plus: ^1.7.0
   like_button: ^2.0.5
   intl: ^0.18.1
+  flutter_stripe: ^9.5.0+1
 
 dev_dependencies:
   flutter_test:
