--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   like_button: ^2.0.5
   intl: ^0.18.1
   flutter_stripe: ^9.5.0+1
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
