--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   intl: ^0.18.1
   flutter_stripe: ^9.5.0+1
   uni_links: ^0.5.1
+  quickalert: ^1.0.2
 
 dev_dependencies:
   flutter_test:
