--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,5 +61,5 @@ flutter:
     - assets/images/artsylane_logo_full.png
     - assets/images/artsylane_logo2.png
     - assets/images/ar_logo.png
-#    - .env
+    - .env
 
